# task-reminder

./: .editorconfig  .gitignore  .prettierignore  CODE_STANDARDS.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.js
.claude/skills/add-feature/: SKILL.md
.claude/skills/code-standards/: SKILL.md
src/: App.vue  styles.css
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  tray.rs
src/components/: CompletedItem.vue  DateTimePicker.vue  PrioritySelector.vue  TaskItem.vue
